--- a/SMB_ui.ui
+++ b/SMB_ui.ui
@@ -6,74 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>682</width>
-    <height>496</height>
+    <width>300</width>
+    <height>450</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>300</width>
+    <height>450</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>300</width>
+    <height>450</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>图像识别管理器</string>
+   <string>中控升级器</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="maximumSize">
+    <size>
+     <width>680</width>
+     <height>16777215</height>
+    </size>
+   </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QFrame" name="frame">
-      <property name="frameShape">
-       <enum>QFrame::Shape::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Shadow::Raised</enum>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_5">
-       <item row="0" column="0">
-        <widget class="QTableWidget" name="tableWidget_camera">
-         <property name="font">
-          <font>
-           <family>Microsoft YaHei</family>
-           <pointsize>10</pointsize>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="selectionBehavior">
-          <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
-         </property>
-         <attribute name="horizontalHeaderStretchLastSection">
-          <bool>true</bool>
-         </attribute>
-         <column>
-          <property name="text">
-           <string>地图编号</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>镜头编号</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>旋转(1,0,-1,-2)</string>
-          </property>
-         </column>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QPushButton" name="pushButton_camera_save">
-         <property name="font">
-          <font>
-           <family>Microsoft YaHei</family>
-           <pointsize>10</pointsize>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>保存</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="0" column="1">
      <widget class="QFrame" name="frame_2">
       <property name="minimumSize">
        <size>
@@ -108,6 +68,12 @@
        </property>
        <item row="0" column="0">
         <widget class="QFrame" name="frame_3">
+         <property name="maximumSize">
+          <size>
+           <width>278</width>
+           <height>435</height>
+          </size>
+         </property>
          <property name="frameShape">
           <enum>QFrame::Shape::StyledPanel</enum>
          </property>
@@ -115,6 +81,13 @@
           <enum>QFrame::Shadow::Raised</enum>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
+          <item row="1" column="0">
+           <widget class="QTextBrowser" name="textBrowser">
+            <property name="readOnly">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QGroupBox" name="groupBox">
             <property name="minimumSize">
@@ -230,27 +203,6 @@
             </layout>
            </widget>
           </item>
-          <item row="2" column="0">
-           <widget class="QTextBrowser" name="textBrowser">
-            <property name="readOnly">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QPushButton" name="pushButton_start">
-            <property name="font">
-             <font>
-              <family>Microsoft YaHei</family>
-              <pointsize>10</pointsize>
-              <bold>true</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>直接启动</string>
-            </property>
-           </widget>
-          </item>
          </layout>
         </widget>
        </item>
@@ -258,16 +210,6 @@
      </widget>
     </item>
    </layout>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>682</width>
-     <height>20</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
